# trabalho-ssd-matriculas

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  STATUS_AMBIENTE.md  docker-compose.yml  out.txt  pyproject.toml  pytest.ini  requirements.txt  scratch_refactor.py  scratch_validate.py  test_evidence.txt  test_output.txt  trabalho_ssd_vicente.md
app/: __init__.py  main.py
app/api/: auth.py  deps.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
app/modules/: __init__.py
docker/kong/: kong.yml
docker/postgres/: init.sql
docs/: APRESENTACAO.md  GUIA_DEMO_E_ADD_COLUNA.md  PROJECT_STATE.md  RELATORIO_CONFORMIDADE_DIAGRAMA.md  RELATORIO_MIGRACAO_SIGAA.md  arquitetura.md  dependencias.md  diagnostico-refatoracao-openapi.md  mapeamento-conceitual-fisico.md  modelo_dominio.md  plano_execucao.md  relatorio-refatoracao-openapi.md
docs/decisions/: 001-monolito-modular.md  002-fastapi-postgres-async.md  003-rbac-jwt-security.md
docs/openapi/: aluno_api.v1.yml  auth_api.v1.yml  curriculo_api.v1.yml  curso_api.v1.yml  disciplina_api.v1.yml  docente_api.v1.yml  elegibilidade_api.v1.yml  historico_api.v1.yml  matricula_api.v1.yml  openapi_sigaa.v1.json  turma_api.v1.yml  (+1 more)
migrations/: env.py
professor_material/: Aluno.yml  HistoricoAcademico.yml  Matricula.yml
scripts/: check_yaml.py  fix_yaml_descriptions.py  seed.py  validate_contracts.py
tests/: README.md  conftest.py  test_api_auth.py  test_api_curriculos.py  test_docentes_e_unidades.py  test_elegibilidade.py  test_sigaa_api.py
(+97 files in other folders)
